# payround-protocol

./: Anchor.toml  Cargo.toml  package.json  readme.md
app/src/routes/: +layout.svelte
programs/payround/: Cargo.toml
programs/payround/src/: constants.rs  error.rs  lib.rs
programs/payround/src/instructions/: change_task_group.rs  close_account.rs  close_degen_account.rs  close_email_account.rs  create_degen_account.rs  create_email_account.rs  create_task.rs  create_task_group.rs  credit_task.rs  delete_task.rs  end_task.rs  make_transfer.rs  mod.rs  pause_task.rs  process_task.rs  process_task_test_ix.rs  resume_task.rs  start_task.rs  update_schedule.rs  update_task.rs  update_task_details.rs  withdraw_credit.rs
programs/payround/src/state/: mod.rs
tests/: mockusdc.ts  payround.ts  utils.ts
tests/keypair/: degen.json  degen.ts  manager.json  manager.ts
