[package]
name = "payround"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payround"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version ="0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
# solana-program = {version="1.14.14", workspace=true}
solana-program = {version="1.14.14"}
clockwork-sdk = { version = "2.0.1" }
bs58 = "0.4.0"
static-pubkey = "1.0.3"

